ClipIt-v1.3.10-21122010001 - 21 Dec. 2010
	+ Fixed: Imported fixes from Parcellite 0.9.3 (thanks to Doug Springer).
	+ Fixed: Fixed cast warnings when building on x86 machines.
	+ Fixed: Fixed build error on ubuntu 11.04.
	+ Fixed: Fixed problem with statusicon menu showing double content.
	+ Fixed: Fixed problem with clicking the statusicon menu multiple
			times killing the program.

ClipIt-v1.3.9-19122010001 - 19 Dec. 2010
	+ Fixed: Fixed error while compiling without indicator support.
	+ Fixed: Fixed a couple of memory leaks.

ClipIt-v1.3.8-18122010002 - 18 Dec. 2010
	+ Fixed: Updated configure script for 1.3.8.

ClipIt-v1.3.8-18122010001 - 18 Dec. 2010
	+ Fixed: Changed the "old" menu to look exactly like the indicator
			menu.
	+ Fixed: Changed the indicator menu to refresh automatically.

ClipIt-v1.3.7-12122010001 - 12 Dec. 2010
	+ Fixed: Changed E-Mail address and Project website.
	+ Fixed: Included all files that get generated by autogen.sh, so
			that now you don't need to run it anymore.

ClipIt-v1.3.6-06122010002 - 06 Dec. 2010
	+ Fixed: Fixed a small bug when building without indicator support.

ClipIt-v1.3.5-06122010001 - 06 Dec. 2010
	+ Added: Added support for "Application Indicator".
	+ Fixed: Fixed a couple of typos and indentations.

ClipIt-v1.3.4-26112010001 - 26 Nov. 2010
	+ Fixed: Now we are warning the user that his history is saved in a
			plain text file and ask for his explicit permission
			to save the history.
	+ Fixed: When the user disables history saving we also ask if he wants
			to empty the current history file.
	+ Fixed: Renamed "Find" menu entry to "Manage history".
	+ Fixed: ClipIt now complies to the "XDG Base Directory Specification".

ClipIt-v1.3.3-23112010001 - 23 Nov. 2010
	+ Fixed: Fixed some more markup.
	+ Fixed: Rearranged parts of the Preferences dialog to be cleaner.
	+ Fixed: Fixed bug in "Manage History" window not selecting the history
			item properly.

ClipIt-v1.3.2-22112010001 - 22 Nov. 2010