@@ -1,6 +1,6 @@
 @%:@! /bin/sh
 @%:@ Guess values for system-dependent variables and create Makefiles.
-@%:@ Generated by GNU Autoconf 2.67 for clipit 1.3.10.
+@%:@ Generated by GNU Autoconf 2.67 for clipit 1.3.11.
 @%:@
 @%:@ Report bugs to <oss@rspwn.com>.
 @%:@ 
@@ -552,8 +552,8 @@ MAKEFLAGS=
 # Identity of this package.
 PACKAGE_NAME='clipit'
 PACKAGE_TARNAME='clipit'
-PACKAGE_VERSION='1.3.10'
-PACKAGE_STRING='clipit 1.3.10'
+PACKAGE_VERSION='1.3.11'
+PACKAGE_STRING='clipit 1.3.11'
 PACKAGE_BUGREPORT='oss@rspwn.com'
 PACKAGE_URL=''
 
@@ -1328,7 +1328,7 @@ if test "$ac_init_help" = "long"; then
   # Omit some internal or obsolete options to make the list less imposing.
   # This message is too long to be a string in the A/UX 3.1 sh.
   cat <<_ACEOF
-\`configure' configures clipit 1.3.10 to adapt to many kinds of systems.
+\`configure' configures clipit 1.3.11 to adapt to many kinds of systems.
 
 Usage: $0 [OPTION]... [VAR=VALUE]...
 
@@ -1398,7 +1398,7 @@ fi
 
 if test -n "$ac_init_help"; then
   case $ac_init_help in
-     short | recursive ) echo "Configuration of clipit 1.3.10:";;
+     short | recursive ) echo "Configuration of clipit 1.3.11:";;
    esac
   cat <<\_ACEOF
 
@@ -1511,7 +1511,7 @@ fi
 test -n "$ac_init_help" && exit $ac_status
 if $ac_init_version; then
   cat <<\_ACEOF
-clipit configure 1.3.10
+clipit configure 1.3.11
 generated by GNU Autoconf 2.67
 
 Copyright (C) 2010 Free Software Foundation, Inc.
@@ -1880,7 +1880,7 @@ cat >config.log <<_ACEOF
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by clipit $as_me 1.3.10, which was
+It was created by clipit $as_me 1.3.11, which was
 generated by GNU Autoconf 2.67.  Invocation command line was
 
   $ $0 $@
@@ -2696,7 +2696,7 @@ fi
 
 # Define the identity of the package.
  PACKAGE=clipit
- VERSION=1.3.10
+ VERSION=1.3.11
 
 
 cat >>confdefs.h <<_ACEOF
@@ -9764,7 +9764,7 @@ cat >>$CONFIG_STATUS <<\_ACEOF || ac_write_fail=1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by clipit $as_me 1.3.10, which was
+This file was extended by clipit $as_me 1.3.11, which was
 generated by GNU Autoconf 2.67.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -9830,7 +9830,7 @@ _ACEOF
 cat >>$CONFIG_STATUS <<_ACEOF || ac_write_fail=1
 ac_cs_config="`$as_echo "$ac_configure_args" | sed 's/^ //; s/[\\""\`\$]/\\\\&/g'`"
 ac_cs_version="\\
-clipit config.status 1.3.10
+clipit config.status 1.3.11
 configured by $0, generated by GNU Autoconf 2.67,
   with options \\"\$ac_cs_config\\"
 
