@@ -8,7 +8,7 @@ m4trace:aclocal.m4:2010: -1- m4_include([m4/lib-prefix.m4])
 m4trace:aclocal.m4:2011: -1- m4_include([m4/nls.m4])
 m4trace:aclocal.m4:2012: -1- m4_include([m4/po.m4])
 m4trace:aclocal.m4:2013: -1- m4_include([m4/progtest.m4])
-m4trace:configure.in:5: -1- AC_INIT([clipit], [1.3.10], [oss@rspwn.com])
+m4trace:configure.in:5: -1- AC_INIT([clipit], [1.3.11], [oss@rspwn.com])
 m4trace:configure.in:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.in:5: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.in:5: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
